--- a/Particpants Data Analysis.ipynb
+++ b/Particpants Data Analysis.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# MRI Data Preprocessing & Analysis\n",
     "\n",
-    "## Preprocessing Using FS"
+    "## Part I: Preprocessing Using FS"
    ]
   },
   {
@@ -30,7 +30,6 @@
    "cell_type": "markdown",
    "id": "8be50d59-4110-4ac0-8f31-c7a8ff423b37",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -182,7 +181,7 @@
    "source": [
     "----------------------------------------------------------------------------------------------\n",
     "\n",
-    "## Basic Analysis\n",
+    "## Part II: Basic Analysis\n",
     "\n",
     "### Subjects with T1w image present"
    ]
